@@ -1,5 +1,9 @@
 2003-08-25  Keisuke Nishida  <kxn30@yahoo.co.jp>
 
+	* fileio.c (sort_read): Bug fix of first read.
+
+2003-08-25  Keisuke Nishida  <kxn30@yahoo.co.jp>
+
 	* fileio.h, fileio.c (cob_sort_init): 3rd argument `sequence'.
 	(cob_sort_finish): New function.
 
